# chesscom-helper

./: .env.example  .env.native  .eslintrc.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  D1_MIGRATION_PLAN.md  DEPLOYMENT.md  Dockerfile  EMAIL_SETUP.md  IMPLEMENTATION_PLAN.md  MIGRATION_COMPLETION_REPORT.md  Makefile  PRD.md  README.md  SQLITE_MIGRATION_REPORT.md  api-gateway-routing-design.md  cloudflare-d1-architecture-patterns.md  cloudflare-workers-edge-constraints.md  collaborative-agent-coordination.md  docker-compose.web.yml  docker-compose.yml  edge-authentication-routing-specification.md  package-lock.json  package.json  setup_gcp_vm.md  start-backend.sh  start-frontend.sh  test-simple.js  tsconfig.json  vitest.config.ts  worker-logs.txt  wrangler.json  wrangler.toml
chesscom_helper/: pyproject.toml
chesscom_helper/accounts/: admin.py  api_views.py  serializers.py  urls.py  views.py
chesscom_helper/chesscom_app/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
chesscom_helper/chesscom_app/common/: chesscom_api.py
chesscom_helper/chesscom_app/migrations/: 0001_initial.py  0002_user.py  0003_delete_dummy.py  (+1 more)
chesscom_helper/config/: gunicorn.py  urls.py  views.py
chesscom_helper/config/settings/: base.py  (+2 more)
chesscom_helper/deploy/: chesscom-helper.service  start.sh
chesscom_helper/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
chesscom_helper/notify_me/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
chesscom_helper/scripts/: deploy-dev.sh
(+280 files in other folders)
