[project]
name = "chesscom_helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Emily Flambe"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "whitenoise (>=6.8.2,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-adminplus (>=0.6,<0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
