[tool.poetry]
name = "chesscom-helper"
version = "0.2.0"
description = "Chess.com live match notification system"
authors = ["Emily Flambe"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.1.5,<6.0.0"
# PostgreSQL dependency removed for SQLite migration
# psycopg2-binary = ">=2.9.10,<3.0.0"
whitenoise = ">=6.8.2,<7.0.0"
gunicorn = ">=23.0.0,<24.0.0"
django-adminplus = ">=0.6,<0.7"
requests = ">=2.32.3,<3.0.0"
django-cors-headers = ">=4.6.0,<5.0.0"
black = ">=24.10.0,<25.0.0"
django-vite = ">=3.0.6,<4.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
rest-framework-simplejwt = ">=0.0.2,<0.0.3"
djangorestframework-simplejwt = ">=5.4.0,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
